--- a/public/.htaccess
+++ b/public/.htaccess
@@ -24,3 +24,5 @@
 # RewriteEngine On
 # RewriteCond %{HTTP:Authorization} ^(.*)
 # RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+
+Header unset X-Powered-By
