--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
-        "mpociot/laravel-apidoc-generator": "^3.4"
+        "mpociot/laravel-apidoc-generator": "^3.4",
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
